@@ -56,6 +56,7 @@ Gorgar L-2 (most likely official, but unreleased so far, makes it the newest ver
 High Speed (G-4 aka German PROTO4)
 Maverick 4.04 (German, Display 4.00)
 Monte Carlo (German) (most likely older revision than existing one, see above)
+Police Force LX-5 (MOD)
 Rollergames TA-2 (LA-2C competition MOD based Tournament Edition)
 Rolling Stones V21 (unreleased so far, makes it the newest version available)
 Soccer Kings (alternate set 2)
